# Stellar-TUI

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
packaging/windows/: stellar.iss
packaging/winget/Thornvald.StellarTUI/0.1.0/: Thornvald.StellarTUI.installer.yaml  Thornvald.StellarTUI.locale.en-US.yaml  Thornvald.StellarTUI.yaml
src/: app.rs  build.rs  config.rs  engine.rs  input.rs  main.rs  notify.rs  types.rs
src/ui/: build_controls.rs  dialogs.rs  engine_panel.rs  header.rs  layout.rs  log_panel.rs  mod.rs  projects.rs  starfield.rs  theme.rs
